@@ -2,6 +2,7 @@
 v3.0.3-git
 ----------
 
+[mjr] Fix removeUserData implementation.
 
 
 ------
